feat(property): add core information update
